# Fractional-GPUs

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  config.cmake.in
benchmarks/: config_benchmark.sh  run.sh  run_benchmark.sh
benchmarks/cudaSDK/fastWalshTransform/: fastWalshTransform.cu  fastWalshTransform_kernel.cuh
benchmarks/cudaSDK/matrixMulShared/: matrixMul.cu
benchmarks/cudaSDK/scalarProd/: scalarProd.cu  scalarProd_kernel.cuh
benchmarks/cudaSDK/sortingNetworks/: bitonicSort.cu  main.cpp
benchmarks/cudaSDK/vectorAdd/: vectorAdd.cu
benchmarks/rodina/cuda/cfd/: euler3d.cu
benchmarks/rodina/cuda/gaussian/: gaussian.cu
benchmarks/rodina/cuda/nn/: nn_cuda.cu
benchmarks/rodina/data/nn/: filelist
benchmarks/rodinia/cuda/cfd/: euler3d.cu
benchmarks/rodinia/cuda/nn/: nn_cuda.cu
doc/: BUILD.md  FAQ.md  FAQ.txt  PORT.txt  REVERSE.md  REVERSE.txt  TEST.md  TEST.txt  TODO.md  TODO.txt
driver/NVIDIA-Linux-x86_64-390.48/: .manifest  LICENSE  NVIDIA_Changelog  README.txt  glx.h  libEGL.so.1.1.0  libEGL.so.390.48  libEGL_nvidia.so.390.48  libGL.so.1.7.0  libGL.so.390.48  libGLESv1_CM.so.1.2.0  libGLESv1_CM_nvidia.so.390.48  libGLESv2.so.2.1.0  libGLESv2_nvidia.so.390.48  libGLX.so.0  libGLX_nvidia.so.390.48  libGLdispatch.so.0  libOpenCL.so.1.0.0  libOpenGL.so.0  libnvcuvid.so.390.48  libnvidia-cfg.so.390.48  libnvidia-egl-wayland.so.1.0.2  libnvidia-encode.so.390.48  libnvidia-fatbinaryloader.so.390.48  libnvidia-fbc.so.390.48  libnvidia-glsi.so.390.48  libnvidia-gtk2.so.390.48  libnvidia-gtk3.so.390.48  libnvidia-ifr.so.390.48  libnvidia-ml.so.390.48  libnvidia-tls.so.390.48  libnvidia-wfb.so.390.48  libvdpau_nvidia.so.390.48  makeself-help-script.sh  makeself.sh  mkprecompiled  nvidia-application-profiles-390.48-key-documentation  nvidia-application-profiles-390.48-rc  nvidia-bug-report.sh  nvidia-cuda-mps-control  (+13 more)
driver/NVIDIA-Linux-x86_64-390.48/32/: libEGL.so.1.1.0  libEGL.so.390.48  libEGL_nvidia.so.390.48  libGL.la  libGL.so.1.7.0  libGL.so.390.48  libGLESv1_CM.so.1.2.0  libGLESv1_CM_nvidia.so.390.48  libGLESv2.so.2.1.0  libGLESv2_nvidia.so.390.48  libGLX.so.0  libGLX_nvidia.so.390.48  libGLdispatch.so.0  libOpenCL.so.1.0.0  libOpenGL.so.0  libnvcuvid.so.390.48  libnvidia-encode.so.390.48  libnvidia-fatbinaryloader.so.390.48  libnvidia-fbc.so.390.48  libnvidia-glsi.so.390.48  libnvidia-ifr.so.390.48  libnvidia-ml.so.390.48  libnvidia-tls.so.390.48  libvdpau_nvidia.so.390.48
driver/NVIDIA-Linux-x86_64-390.48/32/libglvnd_install_checker/: check-entrypoint  check-libegl  check-libgldispatch  check-libglvnd-install.sh  check-libglx  egl_installertest.json  libEGL_installertest.so.0  libGLX_installertest.so.0
driver/NVIDIA-Linux-x86_64-390.48/32/tls/: libnvidia-tls.so.390.48
driver/NVIDIA-Linux-x86_64-390.48/html/: acknowledgements.html  addressingcapabilities.html  addtlresources.html  appendices.html  audiosupport.html  commonproblems.html  configlaptop.html  configmultxscreens.html  configtwinview.html  depth30.html  displaydevicenames.html  dma_issues.html  dpi.html  editxconfig.html  faq.html  flippingubb.html  framelock.html  glxsupport.html  gpunames.html  i2c.html  index.html  installationandconfiguration.html  installdriver.html  installedcomponents.html  introduction.html  kms.html  knownissues.html  minimumrequirements.html  newusertips.html  nvidia-debugdump.html  nvidia-ml.html  nvidia-persistenced.html  nvidia-smi.html  nvidiasettings.html  openglenvvariables.html  optimus.html  powermanagement.html  procinterface.html  profiles.html  programmingmodes.html  (+10 more)
driver/NVIDIA-Linux-x86_64-390.48/kernel/: Kbuild  Makefile  conftest.sh
driver/NVIDIA-Linux-x86_64-390.48/kernel/nvidia-drm/: nv-pci-table.h  nvidia-dma-fence-helper.h  nvidia-drm-conftest.h  nvidia-drm-connector.c  nvidia-drm-connector.h  nvidia-drm-crtc.c  nvidia-drm-crtc.h  nvidia-drm-drv.c  nvidia-drm-encoder.c  nvidia-drm-fb.c  nvidia-drm-fb.h  nvidia-drm-gem-nvkms-memory.c  nvidia-drm-gem-nvkms-memory.h  nvidia-drm-gem-user-memory.c  nvidia-drm-gem-user-memory.h  nvidia-drm-gem.c  nvidia-drm-gem.h  nvidia-drm-helper.c  nvidia-drm-helper.h  nvidia-drm-ioctl.h  nvidia-drm-linux.c  nvidia-drm-modeset.c  nvidia-drm-modeset.h  nvidia-drm-os-interface.h  nvidia-drm-prime-fence.c  nvidia-drm-prime-fence.h  nvidia-drm-priv.h  nvidia-drm.Kbuild  (+2 more)
driver/NVIDIA-Linux-x86_64-390.48/libglvnd_install_checker/: check-entrypoint  check-libegl  check-libgldispatch  check-libglx  libEGL_installertest.so.0  libGLX_installertest.so.0
driver/NVIDIA-Linux-x86_64-390.48/tls/: libnvidia-tls.so.390.48
framework/caffe/: Makefile  Makefile.config.example  NOTES.txt
include/: common.h  config.h  fgpu_internal_allocator.hpp  fgpu_internal_build_config.hpp.in  fgpu_internal_common.hpp  fgpu_internal_config.hpp  fgpu_internal_memory.hpp  fgpu_internal_persistent.hpp  fractional_gpu.h  fractional_gpu.hpp  fractional_gpu_cuda.cuh  fractional_gpu_testing.hpp  g_nvconfig.h  memory.h  persistent.h
persistent/: allocator.cpp  memory.cu  persistent.cu
programs/: dummy.cu  matrixMul.cu  server.cu
programs/cuda_samples/common/: findgllib.mk
programs/cuda_samples/matrixMul/: matrixMul.cu
programs/cuda_samples/matrixMul_persistent/: matrixMul_persistent.cu
programs/cuda_samples/sortingNetworks/: main.cpp
programs/cuda_samples/sortingNetworks_persistent/: NsightEclipse.xml  bitonicSort.cu  main.cpp  sortingNetworks_common.h
programs/dummy_persistent/: dummy_persistent.cu
programs/mandlebrot/: main.cu
programs/mandlebrot_persistent/: bmp.cpp  bmp.h  main.cu
programs/membench/: membench.cu
programs/membench_persistent/: membench.cu
programs/saxpy/: saxpy.cu
programs/saxpy_persistent/: saxpy.cu
programs/vector_add/: main.cu
programs/vector_add_persistent/: main.cu
reverse_engineering/: DATABASE.txt  gpu.cu  hash_function.cpp  hash_function.h  hash_function.hpp  plot_reverse_engineering.sh  reverse_engineering.cpp  reverse_engineering.h  reverse_engineering.hpp
reverse_engineering/data/: DRAM_HISTOGRAM.txt
scripts/: common.sh  evaluation.sh  mps_init.sh  mps_kill.sh  mps_stop.sh
(+317 files in other folders)
